# mim

./: .gitignore  README.md  pyproject.toml
demo/: mim_bookworm.docker  mim_fed.docker
mim/: __init__.py  cli.py  containers.py  integration.py  util.py
mimchine/: __main__.py  cli.py  containers.py  integration.py
