[tool.poetry]
name = "mimchine"
version = "0.21.0"
description = "well integrated mini machines with rootless podman"
authors = ["redthing1 <redthing1@alt.icu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
typer = "^0.15.2"
sh = "^2.2.2"
minlog = "^0.6.0"
single-source = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mimchine = "mimchine.__main__:main"
